// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserNavView logged in - no username 1`] = `
<div
  className="header__usernav"
>
  <DropDown
    classModifier="usernav"
    disabled={false}
    dropdownPosition="BL"
    toggleText={
      <React.Fragment>
        <ChevronDown />
        samples@email.com
      </React.Fragment>
    }
  >
    <ul
      className="usernav__list"
    >
      <li
        className="usernav__list-item"
      >
        <a
          className="usernav__link"
          href="/my?tab=bookmarks"
        >
          Bookmarks
        </a>
      </li>
      <li
        className="usernav__list-item"
      >
        <a
          className="usernav__link"
          href="/logout"
        >
          Logout
        </a>
      </li>
    </ul>
  </DropDown>
</div>
`;

exports[`UserNavView logged in 1`] = `
<div
  className="header__usernav"
>
  <DropDown
    classModifier="usernav"
    disabled={false}
    dropdownPosition="BL"
    toggleText={
      <React.Fragment>
        <ChevronDown />
        samples
      </React.Fragment>
    }
  >
    <ul
      className="usernav__list"
    >
      <li
        className="usernav__list-item"
      >
        <a
          className="usernav__link"
          href="/samples?tab=bookmarks"
        >
          Bookmarks
        </a>
      </li>
      <li
        className="usernav__list-item"
      >
        <a
          className="usernav__link"
          href="/logout"
        >
          Logout
        </a>
      </li>
    </ul>
  </DropDown>
</div>
`;

exports[`UserNavView logged out 1`] = `
<div
  className="header__usernav"
>
  <DropDown
    classModifier="usernav"
    disabled={true}
    dropdownPosition="BL"
    toggleText={
      <a
        href="/login"
      >
        Login
      </a>
    }
  >
    <ul
      className="usernav__list"
    />
  </DropDown>
</div>
`;
